--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
 }
 .prompt {
     background-image: radial-gradient( rgb(253, 190, 44), rgb(78, 57, 6));
-    background-color: rgb(253, 190, 44);
+    background-color: rgb(19, 15, 7);
     border: 2px solid rgb(78, 57, 6);
 }
 .gray {
@@ -276,7 +276,7 @@ h4 {
 }
 #alert {
         position: relative;
-        left: -500px;
+        /* left: -500px; */
         transition-timing-function: ease;
         transition: transform 0.4s;
         -webkit-animation: slide 0.5s forwards;
